src/main/java/com/test/aibackend/error/ErrorResponse.java
package com.test.aibackend.error;

import java.time.Instant;

public record ErrorResponse(String code, String message, Instant timestamp) {

    public static ErrorResponse of(String code, String message) {
        return new ErrorResponse(code, message, Instant.now());
    }
}